--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <section class="footer">
         <div class="cont-bottommenu">
           <h1>Dutak Resto</h1>
-          <a class = 'bottommenu-items' href="#home.html">Home</a>
+          <a class = 'bottommenu-items' href="index.html">Home</a>
           <a class = 'bottommenu-items' href="pricing.html">Menu</a>
           <a class = 'bottommenu-items' href="faq.html">FAQs</a>
           <a class = 'bottommenu-items' href="lokasi.html">Location</a>
