--- a/easteregg.html
+++ b/easteregg.html
@@ -12,10 +12,10 @@
         <img src="extras/planets.jpg" usemap="#image_map">
         <map name="image_map">
             <area alt="Lokasi-easteregg" title="Lokasi-easteregg" href="lokasi.html" coords="982,367,94" shape="circle">
-            <area alt="home-easteregg" title="home-easteregg" href="home.html" coords="662,205,128" shape="circle">
+            <area alt="index-easteregg" title="index-easteregg" href="index.html" coords="662,205,128" shape="circle">
             <area alt="faq-easteregg" title="faq-easteregg" href="faq.html" coords="323,513,104" shape="circle">
             <area alt="pricing-easteregg" title="pricing-easteregg" href="pricing.html" coords="278,208,73" shape="circle">
-            <area alt="kontak-easteregg" title="kontak-easteregg" href="home.html#kontak" coords="593,438,48" shape="circle"> 
+            <area alt="kontak-easteregg" title="kontak-easteregg" href="index.html#kontak" coords="593,438,48" shape="circle"> 
         </map>
     </div>
 </body>
