--- a/faq.html
+++ b/faq.html
@@ -23,7 +23,7 @@
           <img src="extras/Logo.png" class="navbar-logo">
         </a>
         <div class="navbar-nav">
-          <a class = 'navbarItems' href="home.html">Home</a>
+          <a class = 'navbarItems' href="index.html">Home</a>
           <a class = 'navbarItems' href="pricing.html">Menu</a>
           <a class = 'pickedoption navbarItems' href="faq.html">FAQs</a>
           <a class = 'navbarItems' href="lokasi.html">Location</a>
@@ -166,7 +166,7 @@
       <section class="footer">
         <div class="cont-bottommenu">
           <h1>Dutak Resto</h1>
-          <a class = 'bottommenu-items' href="home.html">Home</a>
+          <a class = 'bottommenu-items' href="index.html">Home</a>
           <a class = 'bottommenu-items' href="pricing.html">Menu</a>
           <a class = 'bottommenu-items' href="faq.html">FAQs</a>
           <a class = 'bottommenu-items' href="lokasi.html">Location</a>
